maquetación de botones y enlazado de los mismos

--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
 		<link rel="stylesheet" type="text/css" href="assets/futbol.css">
 		<link rel="stylesheet" type="text/css" href="assets/tenis.css">
 		<link rel="stylesheet" type="text/css" href="assets/basquet.css">
+		<link rel="stylesheet" type="text/css" href="assets/estilos.css">
 	</head>
 	<body>
-		<div id='pasto'>
-			<div id='porteria1'></div>
-			<div id='porteria2'></div>
-			<div id="semiCirc1"></div>
-			<div id="semiCirc2"></div>
-			<div id="circulo"></div>
-			<div id="linea"></div>
-		</div>
+		<hr>
+		<article>
+			<input type="button" value="Futbol" class="botones" id="botonFut">
+			<input type="button" value="Basquet" class="botones" id="botonBasq">
+			<input type="button" value="Tenis" class="botones" id="botonTen">
+		</article>
+		<hr>
+		<section id="futbolCancha">
+			<div id='pasto'>
+				<div id='porteria1'></div>
+				<div id='porteria2'></div>
+				<div id="semiCirc1"></div>
+				<div id="semiCirc2"></div>
+				<div id="circulo"></div>
+				<div id="linea"></div>
+			</div>
+		</section>
+		<section id="basquetCancha">
+			
+		</section>
+
 		<script type="text/javascript" src="assets/main.js"></script>
 	</body>
 </html>
