Cambio exitoso de cancha/ Falta terminar diseños

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" type="text/css" href="assets/estilos.css">
 	</head>
 	<body>
+		<header>
+			<h1 align="center">Canchas Deportivas</h1>
+		</header>
 		<hr>
 		<article>
 			<input type="button" value="Futbol" class="botones" id="botonFut">
@@ -26,7 +29,13 @@
 			</div>
 		</section>
 		<section id="basquetCancha">
+			<div id="basquet">
+				
+			</div>
 			
+		</section>
+		<section id="tenisCancha">
+			<div id="tenis">
 		</section>
 
 		<script type="text/javascript" src="assets/main.js"></script>
