corrección de lineas centrales

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<div class="canchaIz borde absoluto porteriaFut verde"></div>
 				<div class="canchaD borde absoluto porteriaFut verde"></div>
 				<div class="circuloCentral borde absoluto"></div>
-				<div class="lineaCentral absoluto"></div>
+				<div class="lineaCentral borde absoluto"></div>
 			</div>
 		</section>
 		<section id="basquetCancha">
@@ -30,7 +30,7 @@
 				<div class="diamIzq absoluto borde"></div>
 				<div class="diamDer absoluto borde"></div>
 				<div class="circuloCentral borde absoluto"></div>
-				<div class="lineaCentral absoluto"></div>
+				<div class="lineaCentral borde absoluto"></div>
 			</div>
 			
 		</section>
