cancha izquierda de basquetbol

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		</section>
 		<section id="basquetCancha">
 			<div id="basquet" class="tCanchas absoluto cafe">
+				<div class="circCanchaIzq borde absoluto"></div>
+				
 				<div class="circulos borde cIzq absoluto"></div>
 				<div class="circulos borde cDer absoluto"></div>
 				<div class="diamIzq absoluto borde"></div>
