canchas de basquet, sólo faltan los trapecios

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<section id="basquetCancha">
 			<div id="basquet" class="tCanchas absoluto cafe">
 				<div class="circCanchaIzq borde absoluto"></div>
-				
+				<div class="circCanchaDer borde absoluto"></div>
 				<div class="circulos borde cIzq absoluto"></div>
 				<div class="circulos borde cDer absoluto"></div>
 				<div class="diamIzq absoluto borde"></div>
